--- a/project1.html
+++ b/project1.html
@@ -113,7 +113,7 @@
     </header>
     <nav>
         <a href="#about">About</a>
-        <a href="#projects">Projects</a>
+        <a href="#projects">Hobbies</a>
         <a href="#contacts">Contacts</a>
     </nav>
 
@@ -132,16 +132,14 @@
                 <option value="fourth">4th</option>
             </select>
             <input type="reset" value="Reset">
-            <button type="submit">Submit now</button>
         </form>
     </section>
     <section id="projects">
-        <h2><strong>Projects</strong></h2>
+        <h2><strong>Hobbies</strong></h2>
         <form action="projects-form">
-            <label for="works">Write about your works:</label>
+            <label for="works">Write about your hobbies:</label>
             <textarea name="works" id="works" cols="30" rows="10"></textarea>
             <input type="reset" value="Reset">
-            <button type="submit">Submit now</button>
         </form>
     </section>
     <section id="contacts">
@@ -149,7 +147,7 @@
         <form action="contacts-form">
             <label for="number">Phone no:</label>
             <input type="number" id="number" name="number" required>
-            <label for="email">Email id:</label>
+            <label for="email">College Email id:</label>
             <input type="email" id="email" name="email" required>
             <input type="reset" value="Reset">
             <button type="submit">Submit now</button>
