--- a/index.html
+++ b/index.html
@@ -3,87 +3,140 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>HITK Campus Connect</title>
     <style>
-        #title{
-            font: bold;
-            color: black;
+        * {
+            box-sizing: border-box;
             margin: 0;
+            padding: 0;
         }
-        header{
+        body {
+            font-family: Arial, sans-serif;
+            background-color: rgb(203, 199, 192);
+            line-height: 1.6;
+            padding: 10px;
+        }
+        header {
             background-color: bisque;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 7px;
-            margin: 3px;
+            padding: 15px;
             border-radius: 5px;
+            margin-bottom: 10px;
         }
-        #search
-        {
-            margin-left: auto;
+        #title {
+            font-weight: bold;
+            font-size: 28px;
+            color: black;
+            margin-left: 10px;
         }
-        body{
-            background-color: rgb(203, 199, 192);
+        #search {
+            width: 200px;
+            padding: 5px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
         }
         nav {
             display: flex;
-            justify-content: right;
-            background: #444;
-            height: 16px;
-            padding: 0.5em 0;
+            justify-content: space-around;
+            background-color: #444;
+            padding: 10px;
             border-radius: 16px;
         }
         nav a {
             color: #fff;
             text-decoration: none;
-            padding: 3px 12px;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
         }
-        nav a:hover {
-            background: #555;
-            height: 15px;
-            padding: 0.3px 0.1px;
+        nav a:hover, nav a:focus {
+            background-color: #555;
+            outline: none;
         }
-        .chat{
+        section {
+            margin-bottom: 20px;
+        }
+        h2 {
+            font-size: 22px;
+            margin-bottom: 10px;
+        }
+        .chat {
             border: 2px solid black;
             background-color: rgb(244, 244, 241);
             width: 70px;
             height: 70px;
             border-radius: 8px;
             position: fixed;
-            bottom: 1px;
-            right: 1px;
-            
-        }
-        footer{
+            bottom: 20px;
+            right: 20px;
             display: flex;
+            align-items: center;
             justify-content: center;
-            margin: 10px;
-            background: #444;
-            height: 130px;
-            padding: 0.8em 12em;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+        .chat:hover {
+            transform: scale(1.1);
+        }
+        footer {
+            background-color: #444;
+            color: white;
             text-align: center;
+            padding: 20px;
+            border-radius: 10px;
+            margin-top: 20px;
+        }
+        footer hr {
+            margin: 10px 0;
+            border: none;
+            border-top: 1px solid white;
+        }
+
+        /* Responsive design */
+        @media (max-width: 768px) {
+            header {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+            #search {
+                width: 100%;
+                margin-top: 10px;
+            }
+            nav {
+                flex-direction: column;
+                align-items: center;
+            }
+            nav a {
+                width: 100%;
+                text-align: center;
+                padding: 15px 0;
+            }
+            .chat {
+                width: 60px;
+                height: 60px;
+            }
         }
     </style>
 </head>
 <body>
     <header>
-        <img width="80" height="50" src="project1.png" alt="error404">
-        <h3 id="title">HITK Campus Connect</h3>
-        <input type="name" name="search" id="search" placeholder="Search...">  
+        <img width="80" height="50" src="project1.png" alt="HITK Campus Logo">
+        <h1 id="title">HITK Campus Connect</h1>
+        <label for="search" class="sr-only"></label>
+        <input type="search" name="search" id="search" placeholder="Search...">
     </header>
-    <NAV>
+    <nav>
         <a href="#about">ABOUT</a>
         <a href="#gallery">GALLERY</a>
         <a href="clubs">CLUBS</a>
-        <a href="./project1.html" target="_blank">CLUB FORMS</a>
+        <a href="./project1.html" target="_blank">LOGIN FORM</a>
         <a href="#contacts">CONTACT</a>
-    </NAV>
+    </nav>
     <section id="about">
         <h2>About</h2>
-        <div>
-            This page is about the different clubs of Heritage Institute of Technology and their curriculum.
-        </div>
+        <p>This page is about the different clubs of Heritage Institute of Technology and their curriculum.</p>
     </section>
     <section id="gallery">
         <h2>Gallery</h2>
@@ -92,14 +145,14 @@
         <h2>Contacts</h2>
         <button type="button">Contact us</button>
         <br>
-        Instagram page:<a href="http://instagram.com/alok_kr_gupta/" target="_blank">Instagram</a>
+        Instagram page: <a href="http://instagram.com/alok_kr_gupta/" target="_blank">Instagram</a>
         <div class="chat">
-            Ask us
+            &#128172; Ask us
         </div>
     </section>
     <footer>
         <div>
-            Heritage Institute of Technology, popularly known as HITK or HIT is a self-financed institute in the state of the West Bengal. It is affiliated with Maulana Abul Kalam Azad University of Technology Kolkata.
+            Heritage Institute of Technology, popularly known as HITK or HIT is a self-financed institute in the state of West Bengal. It is affiliated with Maulana Abul Kalam Azad University of Technology Kolkata.
         </div>
         <hr>
         <div>
