--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HITK Campus Connect</title>
+    <title>HITK Campus Connect - Gallery</title>
     <style>
         * {
             box-sizing: border-box;
@@ -62,24 +62,6 @@
             font-size: 22px;
             margin-bottom: 10px;
         }
-        .chat {
-            border: 2px solid black;
-            background-color: rgb(244, 244, 241);
-            width: 70px;
-            height: 70px;
-            border-radius: 8px;
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-        }
-        .chat:hover {
-            transform: scale(1.1);
-        }
         footer {
             background-color: #444;
             color: white;
@@ -92,6 +74,82 @@
             margin: 10px 0;
             border: none;
             border-top: 1px solid white;
+        }
+
+        /* Gallery Grid */
+        .gallery-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .gallery-img {
+            width: 200px;
+            height: 200px;
+            border-radius: 10px;
+            object-fit: cover;
+            cursor: pointer;
+            transition: transform 0.3s;
+        }
+        .gallery-img:hover {
+            transform: scale(1.05); /* Slight zoom effect on hover */
+        }
+
+        /* See More Button (formerly Load More) */
+        .see-more-btn {
+            background: linear-gradient(135deg, #ff7e5f, #feb47b); /* Gradient effect */
+            color: white;
+            border: none;
+            padding: 12px 30px;
+            font-size: 18px;
+            font-weight: bold;
+            cursor: pointer;
+            border-radius: 50px; /* Makes the button pill-shaped */
+            transition: all 0.3s ease;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+            margin-left: 20px; /* Space between the last image and the button */
+            align-self: center; /* Center the button vertically */
+        }
+
+        .see-more-btn:hover {
+            background: linear-gradient(135deg, #feb47b, #ff7e5f); /* Reverse gradient on hover */
+            transform: translateY(-3px); /* Slight "lift" effect */
+            box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.25); /* Increased shadow on hover */
+        }
+
+        /* Lightbox (Modal) Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            max-width: 90%;
+            max-height: 90%;
+        }
+
+        .modal img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+
+        .modal-close {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            font-size: 30px;
+            color: white;
+            cursor: pointer;
         }
 
         /* Responsive design */
@@ -112,10 +170,6 @@
                 width: 100%;
                 text-align: center;
                 padding: 15px 0;
-            }
-            .chat {
-                width: 60px;
-                height: 60px;
             }
         }
     </style>
@@ -140,15 +194,27 @@
     </section>
     <section id="gallery">
         <h2>Gallery</h2>
+        <div id="gallery-container" class="gallery-container">
+            <!-- Images will be dynamically loaded here -->
+        </div>
+        <div id="see-more-container" style="display: flex; align-items: center;">
+            <button id="see-more-btn" class="see-more-btn">See More</button>
+        </div>
     </section>
+
+    <!-- Modal Lightbox for Enlarged Images -->
+    <div id="lightbox-modal" class="modal">
+        <span class="modal-close" id="modal-close">&times;</span>
+        <div class="modal-content">
+            <img id="lightbox-img" src="" alt="">
+        </div>
+    </div>
+
     <section id="contacts">
         <h2>Contacts</h2>
         <button type="button">Contact us</button>
         <br>
         Instagram page: <a href="http://instagram.com/alok_kr_gupta/" target="_blank">Instagram</a>
-        <div class="chat">
-            &#128172; Ask us
-        </div>
     </section>
     <footer>
         <div>
@@ -159,5 +225,62 @@
             &copy; 2024 HITK Campus Connect. All Rights Reserved.
         </div>
     </footer>
+
+    <script>
+        const galleryContainer = document.getElementById('gallery-container');
+        const seeMoreBtn = document.getElementById('see-more-btn');
+        const modal = document.getElementById('lightbox-modal');
+        const modalImg = document.getElementById('lightbox-img');
+        const closeModal = document.getElementById('modal-close');
+
+        let images = [
+            "photos/resonance.JPG","photos/resonance2.JPG","photos/resonance3.JPG","photos/resonance2.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG",  /* Add the paths to all your 100 images here */
+        ];
+
+        let currentIndex = 0;
+        const batchSize = 10;
+
+        // Function to load images
+        function loadImages() {
+            let end = currentIndex + batchSize;
+            for (let i = currentIndex; i < end && i < images.length; i++) {
+                const img = document.createElement('img');
+                img.src = images[i];
+                img.alt = `Gallery Image ${i + 1}`;
+                img.classList.add('gallery-img');
+                img.loading = 'lazy';
+                img.addEventListener('click', function() {
+                    modal.style.display = 'flex';
+                    modalImg.src = this.src;
+                });
+                galleryContainer.appendChild(img);
+            }
+            currentIndex = end;
+
+            // Hide the See More button if all images are loaded
+            if (currentIndex >= images.length) {
+                seeMoreBtn.style.display = 'none';
+            }
+        }
+
+        // Load initial images
+        loadImages();
+
+        // Load more images when button is clicked
+        seeMoreBtn.addEventListener('click', loadImages);
+
+        // Close the modal when the close button is clicked
+        closeModal.addEventListener('click', function() {
+            modal.style.display = 'none';
+        });
+
+        // Close the modal if the user clicks outside the image
+        window.onclick = function(event) {
+            if (event.target === modal) {
+                modal.style.display = 'none';
+            }
+        };
+    </script>
 </body>
 </html>
+
