--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         const closeModal = document.getElementById('modal-close');
 
         let images = [
-            "photos/resonance.JPG","photos/resonance2.JPG","photos/resonance3.JPG","photos/resonance2.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG","photos/resonance.JPG",  /* Add the paths to all your 100 images here */
+            "resonance.JPG","resonance2.JPG","resonance3.JPG","resonance.JPG","resonance.JPG","resonance3.JPG","resonance.JPG","resonance2.JPG","resonance3.JPG","resonance.JPG","resonance.JPG","resonance.JPG","resonance.JPG","resonance.JPG","resonance.JPG","resonance.JPG","resonance.JPG","resonance.JPG","resonance.JPG","resonance.JPG","resonance.JPG","resonance.JPG","resonance.JPG","resonance.JPG",  /* Add the paths to all your 100 images here */
         ];
 
         let currentIndex = 0;
