--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <nav>
         <a href="#about">ABOUT</a>
         <a href="#gallery">GALLERY</a>
-        <a href="clubs">CLUBS</a>
+        <a href="./club.html" target="_blank">CLUBS</a>
         <a href="./project1.html" target="_blank">LOGIN FORM</a>
         <a href="#contacts">CONTACT</a>
     </nav>
