--- a/club.html
+++ b/club.html
@@ -98,7 +98,7 @@
     
     <section onclick="window.location.href='resonance.html'">
         <h2>Resonance</h2>
-        <img class="club-icon" src="resonancelogo.jpg" alt="Resonance Icon">
+        <img class="club-icon" src="reso_logo.jpg" alt="Resonance Icon">
     </section>
     <section onclick="window.location.href='ghungroo.html'">
         <h2>Ghungroo</h2>
