--- a/project1.html
+++ b/project1.html
@@ -154,7 +154,13 @@
         </form>
     </section>
    <footer>
-        <p>Thank You!!!!!</p>
+        <div>
+            Heritage Institute of Technology, popularly known as HITK or HIT is a self-financed institute in the state of West Bengal. It is affiliated with Maulana Abul Kalam Azad University of Technology Kolkata.
+        </div>
+        <hr>
+        <div>
+            &copy; 2024 HITK Campus Connect. All Rights Reserved.
+        </div>
    </footer> 
 </body>
 </html>
