--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <a href="#about">ABOUT</a>
         <a href="#gallery">GALLERY</a>
         <a href="./club.html" target="_blank">CLUBS</a>
-        <a href="./project1.html" target="_blank">LOGIN FORM</a>
+        <a href="./project1.html" target="_blank">LOGIN</a>
         <a href="#contacts">CONTACT</a>
     </nav>
     <section id="about">
