--- a/club.html
+++ b/club.html
@@ -11,17 +11,17 @@
             padding: 0;
         }
         body {
-            font-family: 'Arial', sans-serif; /* Default font */
-            background-image: url('project1.png'); /* Background image */
-            background-size: 25%; /* Adjusted to make the image smaller */
-            background-repeat: no-repeat; /* Prevents the background image from repeating */
-            background-position: center; /* Centers the background image */
+            font-family: 'Arial', sans-serif;
+            background-image: url('project1.png'); 
+            background-size: 25%; 
+            background-repeat: no-repeat; 
+            background-position: center;
             line-height: 1.6;
             padding: 10px;
-            color: white; /* Default text color */
+            color: white; 
         }
         header {
-            background-color: rgba(255, 228, 196, 0.8); /* Light background with transparency */
+            background-color: rgba(255, 228, 196, 0.8); 
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -46,36 +46,36 @@
             border: 2px solid rgba(255, 255, 255, 0.8);
             border-radius: 10px;
             padding: 20px;
-            background-color: rgba(50, 50, 50, 0.8); /* Darker background for better contrast */
+            background-color: rgba(50, 50, 50, 0.8); 
             transition: transform 0.3s ease;
-            display: flex; /* Use flexbox for layout */
-            justify-content: space-between; /* Space between title and icon */
-            align-items: center; /* Center items vertically */
-            height: 190px; /* Increased height */
+            display: flex; 
+            justify-content: space-between; 
+            align-items: center; 
+            height: 190px; 
         }
         section:hover {
             transform: scale(1.02);
             border-color: #888;
         }
         h2 {
-            font-size: 26px; /* Increased font size */
+            font-size: 26px; 
             margin-bottom: 10px;
-            color: white; /* Ensure text is visible */
-            font-family: 'Georgia', serif; /* Changed font style */
+            color: white; 
+            font-family: 'Georgia', serif; 
         }
         .club-icon {
-            width: 160px; /* Increased icon width */
-            height: 168px; /* Increased icon height */
+            width: 160px; 
+            height: 168px; 
             border: 2px solid #444;
-            border-radius: 80px; /* Increased border radius for a softer look */
+            border-radius: 80px; 
             transition: transform 0.3s ease;
-            object-fit: cover; /* Ensures the icon fills the area */
+            object-fit: cover; 
         }
         .club-icon:hover {
             transform: scale(1.1);
         }
         footer {
-            background-color: rgba(34, 34, 34, 0.9); /* Dark footer background with different color */
+            background-color: rgba(34, 34, 34, 0.9); 
             color: white;
             text-align: center;
             padding: 20px;
