--- a/resonance.html
+++ b/resonance.html
@@ -11,17 +11,17 @@
             padding: 0;
         }
         body {
-            font-family: 'Arial', sans-serif; /* Default font */
-            background-image: url('project1.png'); /* Background image */
-            background-size: 25%; /* Adjusted to make the image smaller */
-            background-repeat: no-repeat; /* Prevents the background image from repeating */
-            background-position: center; /* Centers the background image */
+            font-family: 'Arial', sans-serif; 
+            background-image: url('project1.png');
+            background-size: 25%; 
+            background-repeat: no-repeat; 
+            background-position: center; 
             line-height: 1.6;
             padding: 10px;
-            color: white; /* Default text color */
+            color: white;
         }
         header {
-            background-color: rgba(255, 228, 196, 0.8); /* Light background with transparency */
+            background-color: rgba(255, 228, 196, 0.8); 
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -46,30 +46,30 @@
             border: 2px solid rgba(255, 255, 255, 0.8);
             border-radius: 10px;
             padding: 20px;
-            background-color: rgba(50, 50, 50, 0.8); /* Darker background for better contrast */
+            background-color: rgba(50, 50, 50, 0.8); 
         }
         h2 {
-            font-size: 26px; /* Increased font size */
+            font-size: 26px;
             margin-bottom: 10px;
-            color: white; /* Ensure text is visible */
-            font-family: 'Georgia', serif; /* Changed font style */
+            color: white; 
+            font-family: 'Georgia', serif;
         }
         p {
-            font-size: 18px; /* Text size for club description */
-            color: white; /* Text color for better visibility */
+            font-size: 18px; 
+            color: white; 
             margin: 10px 0;
         }
         a {
-            color: #ffcc00; /* Link color */
-            text-decoration: none; /* Remove underline */
-            transition: color 0.3s; /* Transition for hover effect */
+            color: #ffcc00; 
+            text-decoration: none; 
+            transition: color 0.3s; 
         }
         a:hover {
-            color: #ffd700; /* Change link color on hover */
-            text-decoration: underline; /* Underline on hover */
+            color: #ffd700;
+            text-decoration: underline;
         }
         footer {
-            background-color: rgba(34, 34, 34, 0.9); /* Dark footer background with different color */
+            background-color: rgba(34, 34, 34, 0.9); 
             color: white;
             text-align: center;
             padding: 20px;
