--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
         }
         #title {
             font-weight: bold;
-            font-size: 28px;
+            font-size: 36px;
             color: black;
-            margin-left: 10px;
+            margin-left: -550px;
+            font-family: 'Georgia', serif;
         }
         #search {
-            width: 200px;
+            width: 320px;
             padding: 5px;
             border-radius: 4px;
             border: 1px solid #ccc;
@@ -55,11 +56,19 @@
             background-color: #555;
             outline: none;
         }
-        section {
-            margin-bottom: 20px;
+        
+        .about-text {
+            font-family: 'Roboto', sans-serif;
+            font-size: 18px;
+            color: #333;
+            line-height: 1.6;
         }
+        section {
+            margin-top: 40px;
+        }
+
         h2 {
-            font-size: 22px;
+            font-size: 28px;
             margin-bottom: 10px;
         }
         footer {
@@ -79,12 +88,13 @@
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
+        
             margin-top: 20px;
         }
 
         .gallery-img {
-            width: 200px;
-            height: 200px;
+            width: 300px;
+            height: 300px;
             border-radius: 10px;
             object-fit: cover;
             cursor: pointer;
@@ -114,7 +124,16 @@
             transform: translateY(-3px); 
             box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.25);
         }
+        .social-logo {
+            width: 30px; 
+            height: 30px; 
+            margin-right: 10px; 
+            transition: transform 0.3s ease; 
+        }
 
+        .social-logo:hover {
+            transform: scale(1.1);
+        }
         .modal {
             display: none;
             position: fixed;
@@ -131,10 +150,15 @@
         .modal-content {
             max-width: 90%;
             max-height: 90%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .modal img {
-            width: 100%;
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
             height: auto;
             border-radius: 10px;
         }
@@ -185,7 +209,11 @@
     </nav>
     <section id="about">
         <h2>About</h2>
-        <p>This page is about the different clubs of Heritage Institute of Technology and their curriculum.</p>
+        <div class="about-text">
+            <p>Heritage Institute of Technology (HITK) is a premier engineering institute located in West Bengal. Established in 2001, it has quickly become a hub for aspiring engineers, offering a diverse range of undergraduate and postgraduate programs.</p>
+            <p>The institute hosts various clubs and organizations that cater to students' interests, ranging from cultural and technical clubs to sports and social service. Each club provides students with a platform to develop their skills, engage with peers, and contribute to the vibrant campus culture.</p>
+            <p>This page is about the different clubs of Heritage Institute of Technology and their curriculum.</p>
+        </div>
     </section>
     <section id="gallery">
         <h2>Gallery</h2>
@@ -205,9 +233,12 @@
 
     <section id="contacts">
         <h2>Contacts</h2>
-        <button type="button">Contact us</button>
-        <br>
-        Instagram page: <a href="http://instagram.com/alok_kr_gupta/" target="_blank">Instagram</a>
+        <a href="http://instagram.com/hitkbeats/" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Logo" class="social-logo" style="margin-right: 10px;">
+        </a>
+        <a href="http://facebook.com/Heritageit" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook Logo" class="social-logo">
+        </a>
     </section>
     <footer>
         <div>
@@ -227,11 +258,11 @@
         const closeModal = document.getElementById('modal-close');
 
         let images = [
-            "resonance.JPG","resonance2.jpg","resonance3.jpg", "resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg","resonance.JPG","resonance2.jpg","resonance3.jpg", /* Add the paths to all your 100 images here */
+            "gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg","gallery1.jpg","resonance2.jpg","resonance3.jpg","ghungroo3.jpg",
         ];
 
         let currentIndex = 0;
-        const batchSize = 10;
+        const batchSize = 5;
 
         function loadImages() {
             let end = currentIndex + batchSize;
