--- a/project1.html
+++ b/project1.html
@@ -13,41 +13,47 @@
         body {
             font-family: 'Arial', sans-serif;
             background-image: url('project1.png'); 
-            background-size: 30%; 
+            background-size: 25%; 
             background-repeat: no-repeat;
             background-position: center;
-            color: #fff; 
+            line-height: 1.6;
+            padding: 10px;
+            background-color: rgb(203, 199, 192);
         }
         header {
             background-color: rgba(255, 228, 196, 0.8); 
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: flex-start;
             padding: 15px;
             border-radius: 5px;
             margin-bottom: 10px;
         }
         #title {
             font-weight: bold;
-            font-size: 28px;
+            font-size: 36px;
             color: black;
-            margin-left: 10px;
+            margin-left: 15px; 
+            font-family: 'Georgia', serif;
         }
-        nav {
+        /* nav {
             display: flex;
-            justify-content: center;
-            background: #444;
-            padding: 0.5em 0;
+            justify-content: space-around;
+            background-color: #444;
+            padding: 10px;
+            border-radius: 16px;
         }
         nav a {
             color: #fff;
             text-decoration: none;
-            padding: 1em;
-            display: inline-block;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
         }
-        nav a:hover {
-            background: #555;
-        }
+        nav a:hover, nav a:focus {
+            background-color: #555;
+            outline: none;
+        } */
         section {
             padding: 2em;
             max-width: 800px;
@@ -57,7 +63,7 @@
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
             margin-bottom: 2em;
         }
-        .about-form input, .about-form textarea {
+        .about-form input, .about-form textarea, .projects-form textarea, .contacts-form input {
             width: 100%;
             padding: 0.5em;
             margin: 0.5em 0;
@@ -88,6 +94,62 @@
             border: none;
             border-top: 1px solid white;
         }
+
+ 
+        @media screen and (max-width: 1024px) {
+            header {
+                justify-content: center;
+                flex-direction: row;
+            }
+            #title {
+                margin-left: 10px;
+            }
+        }
+
+        @media screen and (max-width: 768px) {
+            header {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+            #title {
+                font-size: 28px;
+                margin-left: 0; 
+                margin-bottom: 10px;
+            }
+            nav {
+                flex-direction: column;
+            }
+            nav a {
+                padding: 0.8em;
+                font-size: 16px;
+            }
+        }
+
+        @media screen and (max-width: 480px) {
+            body {
+                padding: 5px;
+            }
+            #title {
+                font-size: 24px;
+            }
+            header img {
+                width: 60px;
+                height: 40px;
+            }
+            section {
+                padding: 1em;
+            }
+            nav a {
+                font-size: 14px;
+            }
+            .about-form input, .projects-form textarea, .contacts-form input {
+                padding: 0.4em;
+            }
+            .about-form button, .projects-form button, .contacts-form button {
+                padding: 0.6em 1.2em;
+            }
+        }
     </style>
 </head>
 <body>
@@ -95,15 +157,15 @@
         <img width="80" height="50" src="project1.png" alt="HITK Campus Logo">
         <h1 id="title">HITK Campus Connect - Login</h1>
     </header>
-    <nav>
+    <!-- <nav>
         <a href="#about">About</a>
         <a href="#projects">Hobbies</a>
         <a href="#contacts">Contacts</a>
-    </nav>
+    </nav> -->
 
     <section id="about">
         <h2><strong>About</strong></h2>
-        <form action="about-form">
+        <form class="about-form" action="about-form">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="dept">Department:</label>
@@ -120,7 +182,7 @@
     </section>
     <section id="projects">
         <h2><strong>Hobbies</strong></h2>
-        <form action="projects-form">
+        <form class="projects-form" action="projects-form">
             <label for="works">Write about your hobbies:</label>
             <textarea name="works" id="works" cols="30" rows="10"></textarea>
             <input type="reset" value="Reset">
@@ -128,15 +190,22 @@
     </section>
     <section id="contacts">
         <h2><strong>Contacts</strong></h2>
-        <form action="contacts-form">
+        <form class="contacts-form" action="contacts-form">
             <label for="number">Phone no:</label>
-            <input type="number" id="number" name="number" required>
+            <input type="tel" id="number" name="number" pattern="\d{10}" maxlength="10" oninput="validatePhoneNumber()" title="Phone number must be exactly 10 digits" required>
             <label for="email">College Email id:</label>
             <input type="email" id="email" name="email" required>
             <input type="reset" value="Reset">
             <button type="submit">Submit now</button>
         </form>
     </section>
+
+    <script>
+        function validatePhoneNumber() {
+            const phoneInput = document.getElementById("number");
+            phoneInput.value = phoneInput.value.replace(/\D/g, '');  
+        }
+    </script>
 
     <footer>
         <div>
