--- a/resonance.html
+++ b/resonance.html
@@ -233,6 +233,9 @@
             cursor: pointer; /* Change cursor to pointer on hover */
             border-radius: 20px;
         }
+            .event-box img{
+                width: 100px;
+            }
         }
 
         /* Modal styles */
