--- a/index.html
+++ b/index.html
@@ -297,12 +297,12 @@
             'gallery1.jpg',
             'ghungroo1.jpg',
             'ghungroo2.jpg',
-            'resonance2.jpg',
-            'resonance3.jpg',
-            'gallery1.jpg',
-            'ghungroo1.jpg',
-            'ghungroo2.jpg',
-            'resonance2.jpg',
+            'resonance.JPG',
+            'reso_imld5.jpg',
+            'reso_ind2.jpg',
+            'reso_cadence1.jpg',
+            'reso_chemcon5.jpg',
+            'reso_prothoma1.jpg',
             'resonance3.jpg',
             'gallery1.jpg',
             'ghungroo1.jpg',
