--- a/index.html
+++ b/index.html
@@ -295,29 +295,20 @@
         let photosToShow = 5;
         const photos = [
             'gallery1.jpg',
+            'ghungroo_ind1.jpg',
+            'ghungroo_tt1.jpg',
+            'ghungroo_tt3.jpg',
             'ghungroo1.jpg',
-            'ghungroo2.jpg',
+            'ghungroo_kgp1.jpg',
+            'ghungroo_tt4.jpg',
+            'ghungroo_ra4.jpg',
+            'ghungroo_ind4.jpg',
             'resonance.JPG',
             'reso_imld5.jpg',
             'reso_ind2.jpg',
             'reso_cadence1.jpg',
             'reso_chemcon5.jpg',
             'reso_prothoma1.jpg',
-            'resonance3.jpg',
-            'gallery1.jpg',
-            'ghungroo1.jpg',
-            'ghungroo2.jpg',
-            'resonance2.jpg',
-            'resonance3.jpg',
-            'gallery1.jpg',
-            'ghungroo1.jpg',
-            'ghungroo2.jpg',
-            'resonance2.jpg',
-            'resonance3.jpg',
-            'gallery1.jpg',
-            'ghungroo1.jpg',
-            'ghungroo2.jpg',
-            'resonance2.jpg',
             'resonance3.jpg',
             'gallery1.jpg',
             'ghungroo1.jpg',
