--- a/ghungroo.html
+++ b/ghungroo.html
@@ -329,7 +329,7 @@
                 font-size: 20px;
             }
             .event-box-content p{
-                margin-top: 20px;
+                margin-top: 58px;
             }
             .nav-container {
                 height: 305px;
@@ -341,7 +341,7 @@
                 text-align: center;
             }
             .about-image {
-                width: 82px; 
+                width: 70px; 
                 height: 150px; 
                 cursor: pointer; 
                 border-radius: 20px;
@@ -349,10 +349,10 @@
             .event-box img {
                 width: 65px;
             }
-            #im1{
-                width: 80px;
-            } 
             #im2{
+                width: 45px;
+            } 
+            #im1{
                 width: 60px;
             }
             .additional-images img{
@@ -464,9 +464,9 @@
 
             <div class="event-box">
                 <div class="event-box-content">
-                    <h3>Independence Day 24</h3>
+                    <h3 id="im2">Independence Day 24</h3>
                     <p>78th Independence day celebration held at Heritage Institute of Technology</p>
-                    <img width="180px" height="180px" src="ghungroo_ind1.jpg" alt="Event 2" onclick="openModal(this.src)">
+                    <img id="im1" width="180px" height="180px" src="ghungroo_ind1.jpg" alt="Event 2" onclick="openModal(this.src)">
                 </div>
                 <div class="see-more-container">
                     <button class="see-more" onclick="toggleImages(this)">See More</button>
@@ -482,7 +482,7 @@
                 <div class="event-box-content">
                     <h3>Rhapsody 23</h3>
                     <p>Winners of the Annual Cultural fest held of Medical college kolkata from 29-4th October,2023</p>
-                    <img id="im1" width="180px" height="180px" src="ghungroo_ra1.jpg" alt="Event 3" onclick="openModal(this.src)">
+                    <img  width="180px" height="180px" src="ghungroo_ra1.jpg" alt="Event 3" onclick="openModal(this.src)">
                 </div>
                 <div class="see-more-container">
                     <button class="see-more" onclick="toggleImages(this)">See More</button>
@@ -535,7 +535,7 @@
                 <div class="event-box-content">
                     <h3>Agon 22</h3>
                     <p>Performer of the Day at Calcutta National Medical College on 21st September,2022</p>
-                    <img id="im2" width="180px" height="180px" src="ghungroo_agon1.jpg" alt="Event 6" onclick="openModal(this.src)">
+                    <img  width="180px" height="180px" src="ghungroo_agon1.jpg" alt="Event 6" onclick="openModal(this.src)">
                 </div>
                 <div class="see-more-container">
                     <button class="see-more" onclick="toggleImages(this)">See More</button>
