--- a/index.html
+++ b/index.html
@@ -242,7 +242,12 @@
         <h2>Clubs</h2>
         <div class="login-text"></div>
             <p>To know more about clubs :
-                <a href="./club.html" target="_blank" >
+                <a href="clubact.pdf" target="_blank" >
+                    <button id="see-more-btn" class="see-more-btn" >click here</button>
+                </a>
+            </p>
+            <p>For MAR-Points details :
+                <a href="mar.pdf" target="_blank" >
                     <button id="see-more-btn" class="see-more-btn" >click here</button>
                 </a>
             </p>
@@ -295,26 +300,33 @@
         let photosToShow = 5;
         const photos = [
             'gallery1.jpg',
+            'gdsc_cord.jpg',
             'ghungroo_ind1.jpg',
+            'pravasana_ret1.jpg',
+            'hfc_verve.jpg',
             'ghungroo_tt1.jpg',
+            'anubhav_audi.jpg',
+            'hfc_aet1.jpg',
             'ghungroo_tt3.jpg',
+            'pravasana_prothoma1.jpg',
             'ghungroo1.jpg',
             'ghungroo_kgp1.jpg',
+            'hfc_man4.jpg',
             'ghungroo_tt4.jpg',
+            'pravasana_cel2.jpg',
             'ghungroo_ra4.jpg',
             'ghungroo_ind4.jpg',
             'resonance.JPG',
             'reso_imld5.jpg',
+            'hfc_wor4.jpg',
             'reso_ind2.jpg',
+            'nss_rag1.jpg',
             'reso_cadence1.jpg',
+            'pravasana_ju1.jpg',
             'reso_chemcon5.jpg',
             'reso_prothoma1.jpg',
-            'resonance3.jpg',
-            'gallery1.jpg',
             'ghungroo1.jpg',
-            'ghungroo2.jpg',
-            'resonance2.jpg',
-            'resonance3.jpg'
+            
         ];
 
         function renderGallery() {
