--- a/club.html
+++ b/club.html
@@ -154,7 +154,7 @@
         <h2>Anubhav</h2>
         <img class="club-icon" src="anubhav_logo.jpg" alt="Anubhav Icon">
     </section>
-    <section onclick="window.location.href='pravasana.html'" data-keywords="painting drawing pravasana">
+    <section onclick="window.location.href='pravasana.html'" data-keywords="painting art drawing pravasana">
         <h2>Pravasana</h2>
         <img class="club-icon" src="pravasana_logo.png" alt="Pravasana Icon" style="object-fit: cover; object-position: center -29px;">
     </section>
@@ -162,7 +162,7 @@
         <h2>Sports</h2>
         <img class="club-icon" src="sports_logo.png" alt="Sports Icon">
     </section>
-    <section onclick="window.location.href='hfc.html'" data-keywords="fashion HFc walk">
+    <section onclick="window.location.href='hfc.html'" data-keywords="fashion model HFC walk">
         <h2>HFC</h2>
         <img class="club-icon" src="hfc_logo.png" alt="HFC Icon">
     </section>
@@ -170,7 +170,7 @@
         <h2>Anahita</h2>
         <img class="club-icon" src="anahita_logo.png" alt="Anahita Icon">
     </section>
-    <section onclick="window.location.href='gdsc.html'" data-keywords="gdsc coding ">
+    <section onclick="window.location.href='gdsc.html'" data-keywords="gdsc developers technical aiml">
         <h2>GDSC</h2>
         <img class="club-icon" src="gdsc_logo.png" alt="GDSC Icon">
     </section>
@@ -178,7 +178,7 @@
         <h2>NSS HITK</h2>
         <img class="club-icon" src="nss_logo.png" alt="NSS HITK Icon">
     </section>
-    <section onclick="window.location.href='geeks.html'" >
+    <section onclick="window.location.href='geeks.html'" data-keywords="code coding tech ">
         <h2>Geeks United</h2>
         <img class="club-icon" src="geeks_logo.png" alt="Geeks Icon">
     </section>
